--- a/DemoExamYP/MainWindow.xaml
+++ b/DemoExamYP/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DemoExamYP"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Лопушок" Icon="/Img/Lopushok.png" Height="450" Width="800">
     <Grid>
         <Frame x:Name="MainFrame"/>
     </Grid>
